unpackaged/main/default/objects/Account/fields/Check_POC__c.field-meta.xml
<CustomField>
    <fullName>Check_POC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check POC</label>
    <type>Checkbox</type>
</CustomField>