unpackaged/main/default/objects/Account/fields/CustomCurrency__c.field-meta.xml
<CustomField>
    <fullName>CustomCurrency__c</fullName>
    <label>CustomCurrency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>