unpackaged/main/default/objects/Account/fields/Email_POC__c.field-meta.xml
<CustomField>
    <fullName>Email_POC__c</fullName>
    <label>Email POC</label>
    <type>Email</type>
</CustomField>