unpackaged/main/default/objects/Account/fields/Text_POC__c.field-meta.xml
<CustomField>
    <fullName>Text_POC__c</fullName>
    <description>Text POC</description>
    <label>Text POC</label>
    <length>10</length>
    <type>Text</type>
</CustomField>